@@ -16,6 +16,7 @@
 * Feature - Divider field added.
 * Fix - Success message issue with default form due to redirection.
 * Fix - Missing Default values for fields in form builder area.
+* Fix - Ajax Form Submission Smart Tag Not Working.
 
 = 1.7.4 - 11-03-2021 =
 * Fix - Hide empty select data field from entry view.
